[project]
name = "get-biji-export"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "DrissionPage>=4.1.1.2",
    "feapder>=1.9.3",
    "mongita>=1.2.0",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=prepend"]
